# gytparse

./: .gitignore  README.md  localrun.sh  meson.build
data/: dlentry.ui  entry.ui  gr.oscillate.gytparse.desktop  gr.oscillate.gytparse.desktop.in  gr.oscillate.gytparse.gschema.xml  gr.oscillate.gytparse.metainfo.xml.in  gytparse.gresource.xml  main.ui  meson.build  more.ui  preferences.ui
flatpak/: 0001-patch-default-mpv.patch  gr.oscillate.gytparse.yaml  mpv.sh
gytparse/: dlentry.ui  entry.ui  gr.oscillate.gytparse.gschema.xml  gytparse.gresource.xml  gytparse.in  main.css  main.py  main.ui  meson.build  mpv.py  operation.py  settings.py  youtube.py
po/: POTFILES  el.po  gytparse.pot  it.po
